--- a/content/tmk/tmk/cmpJavaScriptBottom.html
+++ b/content/tmk/tmk/cmpJavaScriptBottom.html
@@ -7,16 +7,18 @@
 <script type="text/javascript" src="/js/popups.js"></script>
 <script type="text/javascript" src="/js/hashtable.js"></script-->
 
-
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
 <script type="text/javascript">
-	//<![CDATA[ 
-	if (typeof(urchinTracker) == 'function') {
-    	_uacct = "UA-635166-1";    	
-   		urchinTracker();
-	}
-	//]]>
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-635166-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script');
+    ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(ga, s);
+  })();
 </script>
 	
 <script type="text/javascript">
