--- a/content/tmk/tmk/section/cmpSectionCss.html
+++ b/content/tmk/tmk/section/cmpSectionCss.html
@@ -2,15 +2,16 @@
 <!-- estilos TMK -->
 <link type="text/css" href="/css/comun.css" rel="stylesheet">
 <link type="text/css" href="/css/carrito.css" rel="stylesheet">
-<link type="text/css" href="/css/seccion_tematika.css" rel="stylesheet">
-<link type="text/css" href="/css/seccion_tematikaInicio.css" rel="stylesheet">
-<link type="text/css" href="/css/mesa.css" rel="stylesheet">
+<link type="text/css" href="/css/mesaSeccion.css" rel="stylesheet">
+<link type="text/css" href="/css/seccion_libros.css" rel="stylesheet">
 <link type="text/css" href="/css/ultimosVisitados.css" rel="stylesheet">
-<link type="text/css" href="/css/old/seccion_inicio.css" rel="stylesheet">
-<link type="text/css" href="/css/old/comun.css" rel="stylesheet">
+<link type="text/css" href="/estilos/old/seccion_libros.css" rel="stylesheet">
+<link type="text/css" href="/estilos/old/comun.css" rel="stylesheet">
 <!-- JQuery Carousel  -->
 <link rel="stylesheet" type="text/css" href="/carousel/tinycarousel.css" />
 <link media="screen" rel="stylesheet" href="/carousel/colorbox.css" />
+<!-- Menu CSS Carousel  -->
+<link rel="stylesheet" type="text/css" href="/menu/menuBooks.css" />
 
 <!--[if lt IE 7]>
   <link href="/estilos/ie.css" type="text/css" rel="stylesheet">
