--- a/content/tmk/tmk/section/cmpSectionJavaScriptBottom.html
+++ b/content/tmk/tmk/section/cmpSectionJavaScriptBottom.html
@@ -1,4 +1,4 @@
-<!-- JavaScript bottom -->>
+<!-- JavaScript bottom -->
 <script type="text/javascript" src="/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="/js/popups.js"></script>
 <!-- script type="text/javascript" src="/js/equalcolumnsInicio.js"></script>
@@ -50,27 +50,46 @@
 <!-- New Scripts -->
 <script type="text/javascript" src="/js/tematika.js"></script>
 <script type="text/javascript" src="/js/comments.js"></script>
-<script type="text/javascript" src="home-comments.js"></script>
+<script type="text/javascript" src="home-books-comments.js"></script>
 <script type="text/javascript" src="/js/messages.js"></script>
 <script type="text/javascript" src="home-messages.js"></script>
 <script type="text/javascript" src="/js/showcase.js"></script>
-<script type="text/javascript" src="home-showcase.js"></script>
-<script type="text/javascript" src="home-tooltip.js"></script>
-<script type="text/javascript" src="/js/home.js"></script>
+<script type="text/javascript" src="home-books-showcase.js"></script>
+<script type="text/javascript" src="home-books-tooltip.js"></script>
+<script type="text/javascript" src="/js/section.js"></script>
 <!-- Scripts por herencia -->
 <script type="text/javascript" src="/js/dropDownMenu.js"></script>
 <!-- JQuery Carousel -->
 <script type="text/javascript" src="/carousel/jquery.tinycarousel.js"></script>
 <script type="text/javascript" src="/carousel/jquery.colorbox.js"></script>
+
+<script type="text/javascript">
+startList = function() {
+
+	// code for IE
+	if(!document.body.currentStyle) return;
+	var subs = document.getElementsByName('submenu');
+	for(var i=0; i<subs.length; i++) {
+		var li = subs[i].parentNode;
+		if(li && li.lastChild.style) {
+			li.onmouseover = function() {
+				this.lastChild.style.visibility = 'visible';
+			}
+			li.onmouseout = function() {
+				this.lastChild.style.visibility = 'hidden';
+			}
+		}
+	}
+}
+window.onload=startList;
+</script>
 <script type="text/javascript">
 
 jQuery(document).ready(function() {
-	$('#sliderHomeBooks').tinycarousel({ axis: 'y', display: 1} );
-	$('#sliderHomeMusic').tinycarousel({ axis: 'y', display: 1} );
-	$('#sliderHomeMovies').tinycarousel({ axis: 'y', display: 1} );
-	$('#sliderHomeGames').tinycarousel({ axis: 'y', display: 1} );
+	$('#sliderSection').tinycarousel({ axis: 'y', display: 1} );
 	$(".inline").colorbox({opacity: 0, inline:true, width:"400px"});
 	//.bind("mouseover", function(){$(this).trigger("click"); 
+	
 });
 
 </script>
