modificaciones para agregar la seccion de relativos

--- a/content/tmk/tmk/section/cmpSectionCss.html
+++ b/content/tmk/tmk/section/cmpSectionCss.html
@@ -10,6 +10,8 @@
 <!-- JQuery Carousel  -->
 <link rel="stylesheet" type="text/css" href="/carousel/tinycarousel.css" />
 <link media="screen" rel="stylesheet" href="/carousel/colorbox.css" />
+<!-- JQuery jpaginate  -->
+<link rel="stylesheet" type="text/css" href="/jpaginate/css/style.css" />
 <!-- Menu CSS Carousel  -->
 <link rel="stylesheet" type="text/css" href="/menu/menuBooks.css" />
 
