--- a/content/tmk/tmk/section/cmpSectionJavaScriptBottom.html
+++ b/content/tmk/tmk/section/cmpSectionJavaScriptBottom.html
@@ -56,12 +56,16 @@
 <script type="text/javascript" src="/js/showcase.js"></script>
 <script type="text/javascript" src="home-books-showcase.js"></script>
 <script type="text/javascript" src="home-books-tooltip.js"></script>
+<script type="text/javascript" src="home-books-related.js"></script>
 <script type="text/javascript" src="/js/section.js"></script>
+<script type="text/javascript" src="/js/related.js"></script>
 <!-- Scripts por herencia -->
 <script type="text/javascript" src="/js/dropDownMenu.js"></script>
 <!-- JQuery Carousel -->
 <script type="text/javascript" src="/carousel/jquery.tinycarousel.js"></script>
 <script type="text/javascript" src="/carousel/jquery.colorbox.js"></script>
+<!-- JQuery JPaginate -->
+<script type="text/javascript" src="/jpaginate/jquery.paginate.js"></script>
 
 <script type="text/javascript">
 startList = function() {
@@ -89,6 +93,24 @@ jQuery(document).ready(function() {
 	$('#sliderSection').tinycarousel({ axis: 'y', display: 1} );
 	$(".inline").colorbox({opacity: 0, inline:true, width:"400px"});
 	//.bind("mouseover", function(){$(this).trigger("click"); 
+	$("#paginator").paginate({
+				count 		: 10,
+				start 		: 1,
+				display     : 5,
+				border					: true,
+				border_color			: '#fff',
+				text_color  			: '#fff',
+				background_color    	: 'black',	
+				border_hover_color		: '#ccc',
+				text_hover_color  		: '#000',
+				background_hover_color	: '#fff', 
+				images					: false,
+				mouse					: 'press',
+				onChange     			: function(page){
+											$('._current','#paginationdemo').removeClass('_current').hide();
+											$('#p'+page).addClass('_current').show();
+										  }
+			});
 	
 });
 
