correcciones para el paginado de los elementos relacionados y el reordenamiento

--- a/content/tmk/tmk/section/cmpSectionJavaScriptBottom.html
+++ b/content/tmk/tmk/section/cmpSectionJavaScriptBottom.html
@@ -93,24 +93,7 @@ jQuery(document).ready(function() {
 	$('#sliderSection').tinycarousel({ axis: 'y', display: 1} );
 	$(".inline").colorbox({opacity: 0, inline:true, width:"400px"});
 	//.bind("mouseover", function(){$(this).trigger("click"); 
-	$("#paginator").paginate({
-				count 		: 10,
-				start 		: 1,
-				display     : 5,
-				border					: true,
-				border_color			: '#fff',
-				text_color  			: '#fff',
-				background_color    	: 'black',	
-				border_hover_color		: '#ccc',
-				text_hover_color  		: '#000',
-				background_hover_color	: '#fff', 
-				images					: false,
-				mouse					: 'press',
-				onChange     			: function(page){
-											$('._current','#paginationdemo').removeClass('_current').hide();
-											$('#p'+page).addClass('_current').show();
-										  }
-			});
+	fillRelated(1, callBackRelated);
 	
 });
 
