--- a/content/tmk/tmk/section/tmpSectionRelated.html
+++ b/content/tmk/tmk/section/tmpSectionRelated.html
@@ -1,3 +1,4 @@
+{# comienzo definicion de macros a utilizar #}
 {%- macro renderBeginDiv(divId, pageCount) -%}
 	{%- if pageCount == 1 -%}
 		<div id="{{ divId }}" class="pagedemo _current" style="">
@@ -43,7 +44,24 @@
 												</td>
 											</tr>
 {%- endmacro -%}
+{%- macro showdiv(order, opt, onoff) -%}
+	{%- if order == opt -%}
+		{%- if onoff == 'ON' -%}
+			none
+		{%- else -%}
+			block
+		{%- endif -%}
+	{%- else -%}	
+		{%- if onoff == 'ON' -%}
+			block
+		{%- else -%}
+			none
+		{%- endif -%}
+	{%- endif -%}
+{%- endmacro -%}
 {%- macro renderEndDiv() -%}
+											<tr><td>&nbsp;</td></tr>
+
 														</table>
 									</div>
 								</td>
@@ -63,67 +81,82 @@
 														<td><span class="Ftexto02">ORDENAR TITULOS
 																POR:</span></td>
 													</tr>
+											
 													<tr>
-														<td class="moduloordencelda"><a id="OPT1"
-															href="javascript:fillRelated(this.id, callBackRelated);"
-															class="Flink02" rel="nofollow">- Los m&aacute;s vendidos<span class="Ftexto02">-
-																&nbsp;&nbsp;</span></a>
+														<td class="moduloordencelda"><div id="OPT1ON" style="display:{{ showdiv(order, 1, 'ON') }}"><a id="OPT1"
+															href="javascript:fillRelated(1, callBackRelated);"
+															class="Flink02" rel="nofollow">- Los m&aacute;s vendidos<span class="Ftexto02"></a></div>
+															<div id="OPT1OFF" style="display:{{ showdiv(order, 1, 'OFF') }}">- Los m&aacute;s vendidos</div>
 														</td>
 													</tr>
+													
 													<tr>
-														<td class="moduloordencelda"><a id="OPT2"
-															href="javascript:fillRelated(this.id, callBackRelated);"
+														<td class="moduloordencelda"><div id="OPT2ON" style="display:{{ showdiv(order, 2, 'ON') }}"><a id="OPT2"
+															href="javascript:fillRelated(2, callBackRelated);"
 															class="Flink02" rel="nofollow">- Precio de venta<br />
 																<span class="Ftexto02">&nbsp;&nbsp;</span>(+econ&oacute;micos
-																primeros)</a>
+																primeros)</a></div>
+															<div id="OPT2OFF" style="display:{{ showdiv(order, 2, 'OFF') }}">- Precio de venta<br />
+																<span class="Ftexto02">&nbsp;&nbsp;</span>(+econ&oacute;micos
+																primeros)</div>
 														</td>
 
 													</tr>
 
 													<tr>
-														<td class="moduloordencelda">
-															<!-- span class="Ftexto02"--> <a id="OPT3"
-															href="javascript:fillRelated(this.id, callBackRelated);"
+														<td class="moduloordencelda"><div id="OPT3ON" style="display:{{ showdiv(order, 3, 'ON') }}"><a id="OPT3"
+															href="javascript:fillRelated(3, callBackRelated);"
 															class="Flink02" rel="nofollow">- Fecha de
 																aparici&oacute;n<br /> <span class="Ftexto02">&nbsp;&nbsp;</span>(+antiguos
-																primeros)</a>
+																primeros)</a></div>
+															<div id="OPT3OFF" style="display:{{ showdiv(order, 3, 'OFF') }}">- Fecha de
+																aparici&oacute;n<br /> <span class="Ftexto02">&nbsp;&nbsp;</span>(+antiguos
+																primeros)</div>
 														</td>
 
 													</tr>
 
 													<tr>
-														<td class="moduloordencelda"><a id="OPT4"
-															href="javascript:fillRelated(this.id, callBackRelated);"
+														<td class="moduloordencelda"><div id="OPT4ON" style="display:{{ showdiv(order, 4, 'ON') }}"><a id="OPT4"
+															href="javascript:fillRelated(4, callBackRelated);"
 															class="Flink02" rel="nofollow">- Fecha de
 																aparici&oacute;n<br /> <span class="Ftexto02">&nbsp;&nbsp;</span>(+recientes
-																primeros)</a>
+																primeros)</a></div>
+															<div id="OPT4OFF" style="display:{{ showdiv(order, 4, 'OFF') }}">- Fecha de
+																aparici&oacute;n<br /> <span class="Ftexto02">&nbsp;&nbsp;</span>(+recientes
+																primeros)</div>
 														</td>
 
 													</tr>
 
 													<tr>
-														<td class="moduloordencelda"><a id="OPT5"
-															href="javascript:fillRelated(this.id, callBackRelated);"
+														<td class="moduloordencelda"><div id="OPT5ON" style="display:{{ showdiv(order, 5, 'ON') }}"><a id="OPT5"
+															href="javascript:fillRelated(5, callBackRelated);"
 															class="Flink02" rel="nofollow">- Precio de venta<br />
 																<span class="Ftexto02">&nbsp;&nbsp;</span>(+costosos
-																primeros)</a>
+																primeros)</a></div>
+															<div id="OPT5OFF" style="display:{{ showdiv(order, 5, 'OFF') }}">- Precio de venta<br />
+																<span class="Ftexto02">&nbsp;&nbsp;</span>(+costosos
+																primeros)</div>
 														</td>
 
 													</tr>
 
-
 													<tr>
-														<td class="moduloordencelda"><a id="OPT6"
-															href="javascript:fillRelated(this.id, callBackRelated);"
-															class="Flink02" rel="nofollow">-
-																Alfab&eacute;ticamente (A-Z)<br /> </a></td>
+														<td class="moduloordencelda"><div id="OPT6ON" style="display:{{ showdiv(order, 6, 'ON') }}"><a id="OPT6"
+															href="javascript:fillRelated(6, callBackRelated);"
+															class="Flink02" rel="nofollow">- Alfab&eacute;ticamente (A-Z)<br/></a></div>
+															<div id="OPT6OFF" style="display:{{ showdiv(order, 6, 'OFF') }}">- Alfab&eacute;ticamente (A-Z)<br/></div>
+														</td>
 													</tr>
 
 													<tr>
-														<td class="moduloordencelda"><a id="OPT7"
-															href="javascript:fillRelated(this.id, callBackRelated);"
+														<td class="moduloordencelda"><div id="OPT7ON" style="display:{{ showdiv(order, 7, 'ON') }}"><a id="OPT7"
+															href="javascript:fillRelated(7, callBackRelated);"
 															class="Flink02" rel="nofollow">-
-																Alfab&eacute;ticamente (Z-A)<br /> </a></td>
+																Alfab&eacute;ticamente (Z-A)<br/></a></div>
+															<div id="OPT7OFF" style="display:{{ showdiv(order, 7, 'OFF') }}">- Alfab&eacute;ticamente (Z-A)<br/></div>																
+														</td>
 													</tr>
 												</table>
 											</td>
@@ -142,6 +175,19 @@
 			</table>
 					</div>		
 {%- endmacro -%}
+{%- macro centerPaginator(pageCount) -%}
+	{%- if pageCount == 2 -%}
+		140
+	{%- elif pageCount == 3 -%}
+		115
+	{%- elif pageCount == 4 -%}
+		105
+	{%- else -%}
+		90
+	{%- endif -%}
+{%- endmacro -%}
+{# fin deficion macros #}
+{# comienzo del codigo principal del codigo de la pagina tmp #}
 	<div id="paginationdemo" class="demo">
 		{%- set pageItemCount = maxItemPage -%}
 		{%- set pageCount = 0 -%}
@@ -236,15 +282,16 @@
 			{% set pageItemCount = pageItemCount + 1 %}
 			{% if loop.last %}
 				<input type="hidden" id="relatedPageCount" value="{{ pageCount|string }}">
-			{% endif %}
-		{% endfor %}
-		{{ renderEndDiv() }}
+				{{ renderEndDiv() }}
 		<table>
 			<tr>
-				<td width="112">&nbsp;</td>
+				<td width="{{ centerPaginator(pageCount) }}">&nbsp;</td>
 				<td width="260">
 					<div id="paginator"></div></td>
 				<td width="162">&nbsp;</td>
 			</tr>
 		</table>
+			{% endif %}
+		{% endfor %}
 	</div>
+{# fin codigo principal #}
