correccion bug IE

--- a/content/tmk/tmk/tmpSlider.html
+++ b/content/tmk/tmk/tmpSlider.html
@@ -10,7 +10,7 @@
 					<td>&nbsp;</td>
 			{%- endif -%}
 					<td><a class="inline" href="{{ href }}">
-							<img src="{{ article.img_src|escape }}"	width="98" height="auto" alt="">
+							<img src="{{ article.img_src|escape }}"	width="98" alt="">
 						</a>
 					</td>
 			{%- if not loop.index is odd -%}
