--- a/content/tmk/tpl/detail/cmpDetailJavaScriptBottom.html
+++ b/content/tmk/tpl/detail/cmpDetailJavaScriptBottom.html
@@ -1,5 +1,6 @@
 <!-- JavaScript bottom -->
 <script type="text/javascript" src="/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="/jquery/jquery.cookie.js"></script>
 <script type="text/javascript" src="/js/popups.js"></script>
 <!-- script type="text/javascript" src="/js/equalcolumnsInicio.js"></script>
 <script type="text/javascript" src="/js/buscador.js"></script>
@@ -55,7 +56,8 @@
 <script type="text/javascript" src="/js/detail.js"></script>
 <!-- Scripts por herencia -->
 <script type="text/javascript" src="/js/dropDownMenu.js"></script>
-
+<script type="text/javascript" src="/jfather/jfather.js"></script>
+<script type="text/javascript" src="/js/lastVisited.js"></script>
 <script type="text/javascript">
 startList = function() {
 
@@ -75,5 +77,6 @@ startList = function() {
 	}
 }
 window.onload=startList;
+addLastVisited(new Article('url', 'title', 'urlPrincipalAttribute', 'principalAttribute', 'urlGroup', 'group', 'price', 'available', 'id'));
 </script>
 
